Added image src
for wireframe pngs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<body>
 		<h1>The King's Farm</h1>
 		<p> This is the business of Mrs Sarah King</p>
+		<img src="unit2wireframe1.png">
+		<img src="unit2wireframe2.png">
 	</body>
 
 </html>
