trying to add space between images
<div> ?

--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 	<body>
 		<h1>The King's Farm</h1>
 		<p> This is the business of Mrs Sarah King</p>
-		<img src="unit2wireframe1.png">
-		<img src="unit2wireframe2.png">
+		<img src="unit2wireframe1.png" alt="first_wireframe">
+		<div> </div>
+		<div> </div>
+		<div> </div>
+		<div> </div>
+		<div> </div>
+		<div> </div>
+
+
+
+
+
+
+
+		<img src="unit2wireframe2.png" alt="second_wireframe">>
 	</body>
 
 </html>
