added hero bg test

--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html>
 
 	<head>
-		<title>The King's Farms</title>
+		<title>The King's Barn</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
 	<body>
-		<h1>The King's Farm</h1>
+	<div id="hero">
+		<h1>The King's Barn</h1>
 		<p> This is the business of Mrs Sarah King</p>
+
 		<img src="unit2wireframe1.png" alt="first_wireframe">
-		<div> </div>
-		<div> </div>
-		<div> </div>
-		<div> </div>
-		<div> </div>
-		<div> </div>
+		<p></p>
 
 
 
