css and images for unit 3

--- a/index.html
+++ b/index.html
@@ -8,8 +8,49 @@
 
 	<body>
 	<div id="hero">
+	<h3> shop    |    collections    |    customize    |    materials    |    blog    |    cart    |  <!-- <img src="icons/facebook_1.png"> <img src="icons/instagram.png"> --></h3>    
+	<hr>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
 		<h1>The King's Barn</h1>
-		<p> This is the business of Mrs Sarah King</p>
+		<h2> We Make Things.</h2>
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<p id="slogan"> We use the ultimate design of nature to create pieces of resourced love. From handcrafted woodworking to hand-nutured meats and produce, we use our gifts to create for, to gift to and to connect with people, with the utmost respect for life's landscapes.</p>
+		<br>
+		<br>
+		<img src="icons/arrow_small.png" alt"scroll down">
+		<br>
+		<br>
+		<h4> wood    |    food    |    team    |    story</h4>   
+		<br>
+		
+		<ul> wood
+			<li> food </li>
+			<li> team </li>
+			<li> story </li>
+		</ul>
+
+		<h4> contact <br>
+	
+		kingsfarm@kingsfarm.com<br>
+		SM Icons</h4>
 
 	</body>
 
