--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>The King's Barn</title>
-		<link rel="stylesheet" type="text/css" href="css2/style.css">
+		<link rel="stylesheet" type="text/css" href="css_folder/style.css">
 	</head>
 
 	<body>
