--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 	<div id="hero">
-	<h3> shop    |    collections    |    customize    |    materials    |    blog    |    cart    |  <!-- <img src="icons/facebook_1.png"> <img src="icons/instagram.png"> --></h3>    
+	<h3> shop collections customize materials blog cart <!-- <img src="icons/facebook_1.png"> <img src="icons/instagram.png"> --></h3>    
 	<hr>
 		<br>
 		<br>
@@ -29,28 +29,46 @@
 		<br>
 		<br>
 		<br>
+		<img src="icons/arrow_small.png" alt"scroll down">
 		<br>
 		<br>
 		<br>
 		<p id="slogan"> We use the ultimate design of nature to create pieces of resourced love. From handcrafted woodworking to hand-nutured meats and produce, we use our gifts to create for, to gift to and to connect with people, with the utmost respect for life's landscapes.</p>
 		<br>
 		<br>
-		<img src="icons/arrow_small.png" alt"scroll down">
 		<br>
 		<br>
-		<h4> wood    |    food    |    team    |    story</h4>   
-		<br>
+		<h4> wood food team story</h4>   
 		
-		<ul> wood
+	
+		<ul> 
+			<br>
+			<br>
+			<br>wood
 			<li> food </li>
 			<li> team </li>
 			<li> story </li>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 		</ul>
+		
 
-		<h4> contact <br>
-	
+		<h5> 
+		<br>
+		<br>
+		contact <br>
+		phone number<br>
 		kingsfarm@kingsfarm.com<br>
-		SM Icons</h4>
+		social icons
+		<br>
+		<br>
+		<br>
+		</h5>
 
 	</body>
 
